@startuml ERD
!define ENTITY_DOMAIN(version="2.0", DIAMOND_COLOR="#FFFFFF", DIAMOND_TEXT_COLOR="#000000")

package "Server.Models" {
    class User {
        +Id: int
        +Auth0Identifier: string?
        +Email: string
    }

    class UserSettings {
        +Id: int
        +UserId: int
        +Language: string
        +ReceiveNotifications: bool
        +DisplayName: string
        +SoundEnabled: bool
        +ShakeEnabled: bool
    }

    class Achievement {
        +Id: int
        +Name: string
        +Description: string
        +UserId: int
    }

    class LeaderboardEntry {
        +Id: int
        +Score: int
        +DateAchieved: DateTime
        +UserId: int
    }

    class PowerUpItem {
        +Id: int
        +Name: string
        +Quantity: int
        +UserId: int
    }

    User "1" -- "1" UserSettings : Has
    User *-- Achievement : Has
    User *-- LeaderboardEntry : Has
    User *-- PowerUpItem : Has
    LeaderboardEntry *-- User : Belongs to
    PowerUpItem *-- User : Belongs to
    Achievement *-- User : Belongs to
}
@enduml